--- a/broker/test_setup/datasets.org
+++ b/broker/test_setup/datasets.org
@@ -16,7 +16,7 @@ ebe53bd498a9f6446cd77d9252a9847c  LB07-bunny-med.tbz2
 f82aa511f8631bfc9a82fe6fa30f4b52  LB07-bunny-sml.tbz2
 761691119cedfb9836a78a08742b14cc  liver.n6c100.tbz2
 f93b9a9f63447e0e086322b8416d4a39  liver.n6c10.tbz2
-
+bfc83d9f6d5c3d68ca09499190851e86  bone.n26c10.tbz2
 #+end_src
 
 #+begin_src bash
@@ -48,7 +48,6 @@ fe801973c5b22ef6861f2ea79dc1eb9c  babyface.n26c10.tbz2
 4613abc322e8f2fdeae9a5dd10f17540  BL06-gargoyle-lrg.tbz2
 dd0fbccccf7a198681ab838c67b68fbf  bone.n6c100.tbz2
 45281dfec4618e5d20570812dea38760  bone.n6c10.tbz2
-fa64e96bcee96dbc480a1495bddbf53c  LB07-bunny-lrg.tbz2
 8f6faf6cfd245cae1b5feb11ae9eb3cf  liver.n26c100.tbz2
 1bfca57fe54bc46ba948023f754521d6  liver.n26c10.tbz2
 #+end_src
@@ -64,7 +63,6 @@ wget -bqc https://vision.cs.uwaterloo.ca/files/BL06-camel-lrg.tbz2
 wget -bqc https://vision.cs.uwaterloo.ca/files/BL06-gargoyle-lrg.tbz2
 wget -bqc https://vision.cs.uwaterloo.ca/files/bone.n6c100.tbz2
 wget -bqc https://vision.cs.uwaterloo.ca/files/bone.n6c10.tbz2
-wget -bqc https://vision.cs.uwaterloo.ca/files/LB07-bunny-lrg.tbz2
 wget -bqc https://vision.cs.uwaterloo.ca/files/liver.n26c100.tbz2
 wget -bqc https://vision.cs.uwaterloo.ca/files/liver.n26c10.tbz2
 wget -bqc https://vision.cs.uwaterloo.ca/files/babyface.n6c100.tbz2
@@ -83,8 +81,9 @@ wget -bqc https://vision.cs.uwaterloo.ca/files/LB07-bunny-sml.tbz2
 wget -bqc https://vision.cs.uwaterloo.ca/files/LB07-bunny-med.tbz2
 wget -bqc https://vision.cs.uwaterloo.ca/files/liver.n6c10.tbz2
 wget -bqc https://vision.cs.uwaterloo.ca/files/liver.n6c100.tbz2
+wget -bqc https://vision.cs.uwaterloo.ca/files/bone.n26c10.tbz2
 #+end_src
 
 #+begin_src bash
-for i in `ls *.tbz2` ; do echo $i ; done
+for i in `command ls *.tbz2` ; do tarx "$i" ; done
 #+end_src
