Convert `ipfs_id` into `ipfs_address`.
- Fix minor changed on the log() function

--- a/broker/TODO.org
+++ b/broker/TODO.org
@@ -3,3 +3,4 @@
 ** TODO patch eudat and google-drive
 ** TODO verify downloaded data
 ** TODO re-run the tests
+** TODO Convert `ipfsID` into `ipfsAddress` in eBlocBrokerInterface.sol
