--- a/broker/_slurm/README.org
+++ b/broker/_slurm/README.org
@@ -91,7 +91,7 @@ sacctmgr create user $user_name defaultaccount=$user_name adminlevel=None --imme
 sacctmgr remove user where user=user_name
 #+end_src
 
----------------------------------------------------------------------------------------
+---------------------------------------------------------------------------------------------------
 
 *** Check registered provider and users
 
@@ -122,15 +122,11 @@ sudo usermod -u 1000 username
 
 -------------
 
-* From: https://stackoverflow.com/a/47009930/2402577
+** - Should I compile slurm with --enable-front-end fiag in order to emulate a larger cluster?
+https://stackoverflow.com/a/47009930/2402577
 
-#+begin_src markdown
-Should I compile slurm with --enable-front-end fiag in order to emulate a larger cluster? –
-alper
-
-@alper According to the current version of the FAQ (slurm.schedmd.com/faq.html,
-question Can Slurm emulate a larger cluster?), it appears so – damienfrancois
-#+end_src
+According to the current version of the FAQ (slurm.schedmd.com/faq.html, question Can Slurm emulate
+a larger cluster?), it appears so – damienfrancois
 
 ** DOCKER
 
