--- a/docker/README.org
+++ b/docker/README.org
@@ -10,6 +10,7 @@ remove_dangling () {
     docker images -qa -f 'dangling=true' | ifne docker rmi $(docker images -qa -f 'dangling=true') --force
     docker image ls
 }
+remove_dangling
 
 # sudo systemctl start docker
 # sudo docker run eblocbroker
