--- a/broker/_slurm/README.org
+++ b/broker/_slurm/README.org
@@ -141,6 +141,10 @@ docker ps
 docker exec -it ebloc-broker_slurm_1 /bin/bash
 #+end_src
 
+** Important to run
+
+~slurmd -N ocean2 -Dvvv~
+
 ** main helpful links
 - [[https://github.com/giovtorres/docker-centos7-slurm/blob/main/Dockerfile]]
 - [[https://github.com/edf-hpc/slurm-web/blob/master/docker/container/Dockerfile]]
