--- a/contract/README.org
+++ b/contract/README.org
@@ -54,3 +54,15 @@ $ brownie console --network bloxberg
 #+begin_src bash
 brownie accounts import alper ~/.eblocpoa/keystore/UTC--2020-03-18T13-02-58.306094822Z--d118b6ef83ccf11b34331f1e7285542ddf70bc49
 #+end_src
+
+------------------------------
+
+* Solidity Notes
+
+** <type>[] memory <name> acts as function pointer
+#+begin_src solidity
+function function(<type>[] memory dataTransferIn) internal { // does not have to be internal
+    // makes change on the location it called from; acts like a function poinrter
+    dataTransferIn[0] = 0;
+}
+#+end_src
