--- a/README.org
+++ b/README.org
@@ -1,7 +1,7 @@
 * ebloc-broker
 
-=eBlocBroker= is a smart contract that applies blockchain technology to provide a market for
-computational and data resources to research communities.
+=eBlocBroker= is a smart contract as an autonomous volunteer computing and sharing data resource broker based on blockchain for e-Science.
+It applies blockchain technology to provide a market for computational and data resources to research communities.
 
 # For more info see: ...
 
@@ -12,9 +12,9 @@ computational and data resources to research communities.
 
 - [[https://github.com/SchedMD/slurm][Slurm]],
   [[https://ipfs.io][IPFS]],
+  [[https://github.com/eth-brownie/brownie][eth-brownie]],
   [[https://github.com/prasmussen/gdrive][prasmussen/gdrive]],
   [[https://github.com/owncloud/pyocclient][owncloud/pyocclient]],
-  [[https://github.com/eth-brownie/brownie][eth-brownie]],
   [[https://github.com/trufflesuite/ganache][ganache-cli]]
 # [[https://geth.ethereum.org/docs/getting-started][Geth]]
 
