Add minor improvements

--- a/broker/todo.org
+++ b/broker/todo.org
@@ -30,3 +30,4 @@ Slurm status should be set on the receiveDeposit call not setJobStatus
 ** TODO oc may have "owncloud.owncloud.HTTPResponseError: HTTP error: 401" error
 ** TODO Some code should go into utils.py
    Some functıons are public that should carried into ~utils.py~
+** TODO for workflow visualization: https://github.com/mermaid-js/mermaid
