--- a/broker/ipfs/README.org
+++ b/broker/ipfs/README.org
@@ -1,4 +1,5 @@
-* Enable Port Google-Instance
+* DOC
+** Enable Port Google-Instance
 
 Helpful conversation:
 - [[https://gist.github.com/SomajitDey/25f2f7f2aae8ef722f77a7e9ea40cc7c?permalink_comment_id=4022998#gistcomment-4022998]]
@@ -9,21 +10,7 @@ say either
 
 ---------------------------------------
 
-- ~Navigation Menu~ => ~VPN Network~ => ~Firewall~ => ~Create Firewall Rule~
-- Name: ~ipfs~
-- Logs: ~Off~
-- Type: ~Ingress~
-- Priority: ~1000~
-- Targets => ~All instances in the network~
-- Source IP ranges: ~0.0.0.0/0~
-- TCP: ~4001~
-- Action: ~Allow~
-- default
-- Off
-- Open instance, Edit, network tags => add ~ipfs~
-- ~sudo service network-manager restart~ or reboot in case
-
-* Setup Private Network
+** Setup Private Network
 
 - [[https://github.com/ipfs/go-ipfs/blob/master/docs/experimental-features.md#private-networks][Guide]]
 - [[https://www.geekdecoder.com/setting-up-a-private-ipfs-network-with-ipfs-and-ipfs-cluster][Guide_1]]
@@ -42,7 +29,7 @@ export LIBP2P_FORCE_PNET=1 && IPFS_PATH=~/.ipfs ipfs daemon
 ipfs swarm addrs
 #+end_src
 
-* Google Node
+** Google Node
 #+begin_src bash
 sudo firewall-cmd --add-port=4001/tcp --permanent
 sudo firewall-cmd --reload
@@ -63,15 +50,13 @@ public
   rich rules:
 #+end_src
 
-* All other nodes
+** All other nodes
 - Port check: ~nc -v <ip> 4001~
 - ~nc gateway-int.ipfs.io 4001~
 
 #+begin_src bash
-# sudo netstat -lptn | grep 4001
-# ipfs config Addresses
-$ gcloud compute firewall-rules list | grep 'ipfs'
-default-ipfs            default  INGRESS    1000      tcp:4001
+sudo netstat -lptn | grep 4001
+ipfs config Addresses
 #+end_src
 
 - [[https://stackoverflow.com/questions/21065922/how-to-open-a-specific-port-such-as-9090-in-google-compute-engine/27675578#27675578]]
@@ -134,4 +119,24 @@ connect_to_private_ipfs
 ipfs daemon --routing=none &
 ipfs repo gc
 time ipfs cat QmaSSwsS2nAjExnxrqwKtmK5rLLhmqpju1HCsnPSigtHmV > /dev/null
+#+end_src
+
+** Google Instance
+- ~Navigation Menu~ => ~VPN Network~ => ~Firewall~ => ~Create Firewall Rule~
+- Name: ~ipfs~
+- Logs: ~Off~
+- Type: ~Ingress~
+- Priority: ~1000~
+- Targets => ~All instances in the network~
+- Source IP ranges: ~0.0.0.0/0~
+- TCP: ~4001~
+- Action: ~Allow~
+- default
+- Off
+- Open instance, Edit, network tags => add ~ipfs~
+- ~sudo service network-manager restart~ or reboot in case
+
+#+begin_src bash
+$ gcloud compute firewall-rules list | grep 'ipfs'
+default-ipfs            default  INGRESS    1000      tcp:4001
 #+end_src
