--- a/broker/test_setup/datasets.org
+++ b/broker/test_setup/datasets.org
@@ -68,15 +68,17 @@ bfc83d9f6d5c3d68ca09499190851e86  bone.n26c10.tbz2
 
 ** Download small data-sets
 #+begin_src bash
-wget -bqc https://vision.cs.uwaterloo.ca/files/BL06-gargoyle-sml.tbz2
-wget -bqc https://vision.cs.uwaterloo.ca/files/babyface.n6c10.tbz2
 wget -bqc https://vision.cs.uwaterloo.ca/files/BL06-camel-sml.tbz2
-wget -bqc https://vision.cs.uwaterloo.ca/files/LB07-bunny-sml.tbz2
+wget -bqc https://vision.cs.uwaterloo.ca/files/BL06-camel-med.tbz2
+wget -bqc https://vision.cs.uwaterloo.ca/files/BL06-gargoyle-sml.tbz2
+wget -bqc https://vision.cs.uwaterloo.ca/files/BL06-gargoyle-med.tbz2
+wget -bqc https://vision.cs.uwaterloo.ca/files/babyface.n6c10.tbz2
 wget -bqc https://vision.cs.uwaterloo.ca/files/BVZ-sawtooth.tbz2
 wget -bqc https://vision.cs.uwaterloo.ca/files/BVZ-tsukuba.tbz2
 wget -bqc https://vision.cs.uwaterloo.ca/files/BVZ-venus.tbz2
 wget -bqc https://vision.cs.uwaterloo.ca/files/KZ2-tsukuba.tbz2
 wget -bqc https://vision.cs.uwaterloo.ca/files/LB07-bunny-sml.tbz2
+wget -bqc https://vision.cs.uwaterloo.ca/files/LB07-bunny-med.tbz2
 wget -bqc https://vision.cs.uwaterloo.ca/files/KZ2-sawtooth.tbz2
 wget -bqc https://vision.cs.uwaterloo.ca/files/KZ2-venus.tbz2
 wget -bqc https://vision.cs.uwaterloo.ca/files/liver.n6c10.tbz2
